<resources>
    <string name="app_name">Fitness Club App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_your_club">Sign up your club</string>
    <string name="join_our_family_by_signing_up_your_club">Join our family by signing up your club</string>
    <string name="club_name">Club Name</string>
    <string name="manager_name_s">Manager Name(s)</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="forgot_password">Forgot password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>

    <string name="write_your_comment_here"><font size="14">Write your comment here</font></string>
</resources>